--- a/scss/5-base/_layout-base.scss
+++ b/scss/5-base/_layout-base.scss
@@ -75,7 +75,7 @@ html, body {
 	text-align: center;
 	display: inline-block;
 	width: 100%;
-	overflow: hidden;
+	overflow: visible;
 	
 	a {
 		font-size: 2.5em;
@@ -174,6 +174,7 @@ html, body {
 	line-height: 2em;
 	text-transform: capitalize;
 	@include box-shadow(em(2), em(1), em(1), $gist-dark-gray);
+	overflow: visible;
 	
 	a {
 		font-weight: 300;
