--- a/scss/5-base/_layout-base.scss
+++ b/scss/5-base/_layout-base.scss
@@ -75,7 +75,8 @@ html, body {
 	text-align: center;
 	display: inline-block;
 	width: 100%;
-	overflow: visible;
+	padding: 0;
+	margin: 0;
 	
 	a {
 		font-size: 2.5em;
@@ -169,12 +170,13 @@ html, body {
 .cta {
 	@include span-columns(12 of 12);
 	text-align: center;
+	padding: 0;
+	margin: 0;
 	background-color: rgba($gist-red, 0.8);
 	font-size: 1.15em;
 	line-height: 2em;
 	text-transform: capitalize;
 	@include box-shadow(em(2), em(1), em(1), $gist-dark-gray);
-	overflow: visible;
 	
 	a {
 		font-weight: 300;
