--- a/css/gist.css
+++ b/css/gist.css
@@ -2785,7 +2785,8 @@ html, body {
   display: inline-block;
   width: 100%;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  overflow-x: hidden; }
   .social-media:last-child {
     margin-right: 0; }
   .social-media a {
@@ -2881,7 +2882,8 @@ html, body {
   text-transform: capitalize;
   -moz-box-shadow: 0.125em 0.0625em 0.0625em #212121;
   -webkit-box-shadow: 0.125em 0.0625em 0.0625em #212121;
-  box-shadow: 0.125em 0.0625em 0.0625em #212121; }
+  box-shadow: 0.125em 0.0625em 0.0625em #212121;
+  overflow-x: hidden; }
   .cta:last-child {
     margin-right: 0; }
   .cta a {
