--- a/scss/5-base/_layout-base.scss
+++ b/scss/5-base/_layout-base.scss
@@ -77,7 +77,7 @@ html, body {
 	width: 100%;
 	padding: 0;
 	margin: 0;
-	overflow-x: hidden;
+	overflow-y: hidden;
 	
 	a {
 		font-size: 2.5em;
@@ -178,7 +178,7 @@ html, body {
 	line-height: 2em;
 	text-transform: capitalize;
 	@include box-shadow(em(2), em(1), em(1), $gist-dark-gray);
-	overflow-x: hidden;
+	overflow-y: hidden;
 	
 	a {
 		font-weight: 300;
