--- a/css/gist.css
+++ b/css/gist.css
@@ -2707,7 +2707,8 @@ body {
   background-size: cover; }
 
 html, body {
-  height: 100%; }
+  height: 100%;
+  overflow: hidden; }
 
 /*-----------------
  Main Container
@@ -2785,8 +2786,7 @@ html, body {
   display: inline-block;
   width: 100%;
   padding: 0;
-  margin: 0;
-  overflow-y: hidden; }
+  margin: 0; }
   .social-media:last-child {
     margin-right: 0; }
   .social-media a {
@@ -2882,8 +2882,7 @@ html, body {
   text-transform: capitalize;
   -moz-box-shadow: 0.125em 0.0625em 0.0625em #212121;
   -webkit-box-shadow: 0.125em 0.0625em 0.0625em #212121;
-  box-shadow: 0.125em 0.0625em 0.0625em #212121;
-  overflow-y: hidden; }
+  box-shadow: 0.125em 0.0625em 0.0625em #212121; }
   .cta:last-child {
     margin-right: 0; }
   .cta a {
