--- a/scss/5-base/_layout-base.scss
+++ b/scss/5-base/_layout-base.scss
@@ -19,6 +19,7 @@ body {
 
 html, body {
 	height: 100%;
+	overflow: hidden;
 }
 
 /*-----------------
@@ -77,7 +78,6 @@ html, body {
 	width: 100%;
 	padding: 0;
 	margin: 0;
-	overflow-y: hidden;
 	
 	a {
 		font-size: 2.5em;
@@ -178,7 +178,6 @@ html, body {
 	line-height: 2em;
 	text-transform: capitalize;
 	@include box-shadow(em(2), em(1), em(1), $gist-dark-gray);
-	overflow-y: hidden;
 	
 	a {
 		font-weight: 300;
