--- a/css/gist.css
+++ b/css/gist.css
@@ -2708,7 +2708,7 @@ body {
 
 html, body {
   height: 100%;
-  overflow: hidden; }
+  overflow-x: hidden; }
 
 /*-----------------
  Main Container
