Changed highlight color to suit theme

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,9 +53,10 @@ body {
     }
 }
 ::selection {
-    background: #0080FF;
+    //background: #0080FF;
+    background: #FF9800;
     text-shadow: none;
 }
 pre {
-    margin:0;
+    margin: 0;
 }
