--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,45 @@
-body{background-color:black;background-image:radial-gradient(rgba(0,97,150,0.75), black 120%);height:100vh;margin:0;overflow:hidden;padding:2rem;color:white;font:1.3rem Inconsolata, monospace;text-shadow:0 0 5px #C8C8C8}body::after{content:"";position:absolute;top:0;left:0;width:100vw;height:100vh;background:repeating-linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15) 1px, transparent 1px, transparent 2px);pointer-events:none}body .terminal .wrapped_text .type{white-space:pre-line}@media screen and (min-width: 320px){body{font-size:1.1rem;padding:10%}}@media screen and (min-width: 768px){body{padding:10%;font-size:1.6rem}}@media screen and (min-width: 1024px){body{padding:5%;font-size:2rem}}::selection{background:#0080FF;text-shadow:none}pre{margin:0}
+/*-----------------------------------------------------------------
+pranavrele.com Maintenance Page
+@author: Pranav Rele
+@version: 1.0
+------------------------------------------------------------------*/
+body {
+  background-color: black;
+  background-image: radial-gradient(rgba(0, 97, 150, 0.75), black 120%);
+  height: 100vh;
+  margin: 0;
+  overflow: hidden;
+  padding: 2rem;
+  color: white;
+  font: 1.3rem Inconsolata, monospace;
+  text-shadow: 0 0 5px #C8C8C8; }
+  body::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: repeating-linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15) 1px, transparent 1px, transparent 2px);
+    pointer-events: none; }
+  body .terminal .wrapped_text .type {
+    white-space: pre-line; }
+  @media screen and (min-width: 320px) {
+    body {
+      font-size: 1.1rem;
+      padding: 10%; } }
+  @media screen and (min-width: 768px) {
+    body {
+      padding: 10%;
+      font-size: 1.6rem; } }
+  @media screen and (min-width: 1024px) {
+    body {
+      padding: 5%;
+      font-size: 2rem; } }
+
+::selection {
+  background: #FF9800;
+  text-shadow: none; }
+
+pre {
+  margin: 0; }
